ヘッダー　mockupページへのリンク修正

--- a/include/header.html
+++ b/include/header.html
@@ -17,7 +17,7 @@
                     <li class="g-nav__menu-link__list-item"><a href="/">Home</a></li>
                     <li class="g-nav__menu-link__list-item"><a href="/about/">About</a></li>
                     <li class="g-nav__menu-link__list-item"><a href="/works/">Works</a></li>
-                    <li class="g-nav__menu-link__list-item"><a href="/Mockup/">Mockup</a></li>
+                    <li class="g-nav__menu-link__list-item"><a href="/mockup/">Mockup</a></li>
                 </ul>
             </div> 
          </div>
